<resources>
    <string name="app_name">MorseLight</string>
    <string name="decode">Decode</string>
    <string name="Signal">Signal</string>
    <string name="Sound">Sound</string>
    <string name="Flash">Flash</string>
    <string name="Default">Please enter a phrase above to be converted to Morse Code.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audio">Audio Decoder</string>
    <string name="title_activity_light">Light Decoder</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="light_switch">Light</string>
    <string name="sound_switch">Sound</string>
    <string name="start">start</string>
    <string name="encode">encode</string>
    <string name="title_activity_splash">Splash Screen</string>
    <string name="desc">In this app you will be able to write a message and encode it into morse code.</string>

    <string name="title_activity_help1">What Is Morse Code</string>
    <string name="help1_text">
        Morse code is a method of transmitting text information as a series of on-off tones, lights, or clicks that can be directly understood by a skilled listener or observer without special equipment.
         The International Morse Code encodes the ISO basic Latin alphabet, some extra Latin letters, the Arabic numerals and a small set of punctuation and procedural signals as standardized sequences of short and long signals called "dots" and "dashes", or "dits" and "dahs".
         Because many non-English natural languages use more than the 26 Roman letters, extensions to the Morse alphabet exist for those languages.
        \n\nEach character (letter or numeral) is represented by a unique sequence of dots and dashes.
         The duration of a dash is three times the duration of a dot. Each dot or dash is followed by a short silence, equal to the dot duration.
         The letters of a word are separated by a space equal to three dots (one dash), and the words are separated by a space equal to seven dots.
         The dot duration is the basic unit of time measurement in code transmission. To increase the speed of the communication, the code was designed so that the length of each character in Morse varies approximately inversely to its frequency of occurrence in English.
         Thus the most common letter in English, the letter "E", has the shortest code, a single dot.
        \n\nMorse code is most popular among amateur radio operators, although knowledge of and proficiency with it is no longer required for licensing in most countries.
         Pilots and air traffic controllers usually need only a cursory understanding. Aeronautical navigational aids, such as VORs and NDBs, constantly identify in Morse code.
         Compared to voice, Morse code is less sensitive to poor signal conditions, yet still comprehensible to humans without a decoding device.
         Morse is therefore a useful alternative to synthesized speech for sending automated data to skilled listeners on voice channels.
         Many amateur radio repeaters, for example, identify with Morse, even though they are used for voice communications.
        \n\nIn an emergency, Morse code can be sent by improvised methods that can be easily "keyed" on and off, making it one of the simplest and most versatile methods of telecommunication.
         The most common distress signal is SOS or three dots, three dashes and three dots, internationally recognized by treaty.
    </string>
    <string name="title_activity_help2">Morse Code Chart</string>
       <string name="help2_text">1. The length of a dot is a one unit.
        \n2. A dash is three units.
        \n3. The space between parts of the same letter is one unit.
        \n4. The space between letters is three units.
        \n5. The space between words is seven units.
        <p><b>\n\nA\t\t.-
        \nB\t\t-...
        \nC\t\t-.-.
        \nD\t\t-..
        \nE\t\t.
        \nF\t\t..-.
        \nG\t\t--.
        \nH\t\t....
        \nI\t\t..
        \nJ\t\t.---
        \nK\t\t-.-
        \nL\t\t.-..
        \nM\t\t--
        \nN\t\t-.
        \nO\t\t---
        \nP\t\t.--.
        \nQ\t\t--.-
        \nR\t\t.-.
        \nS\t\t...
        \nT\t\t-
        \nU\t\t..-
        \nV\t\t...-
        \nW\t\t.--
        \nX\t\t-..-
        \nY\t\t-.--
        \nZ\t\t--..
        \n1\t\t.----
        \n2\t\t..---
        \n3\t\t...--
        \n4\t\t....-
        \n5\t\t.....
        \n6\t\t-....
        \n7\t\t--...
        \n8\t\t---..
        \n9\t\t----.
        \n0\t\t-----
        \nSpace\t\t/
        \n.\t\t.-.-.-
        \n,\t\t--..--
        \n?\t\t..--..
        \n/\t\t-..-.
        \n@\t\t.--.-</b></p>
    </string>
    <string name="title_activity_help3">How to Use MorseLight</string>
    <string name="help3_text">You have the option to encode your message by either through sound or the flash light (if your device has one) with a switch.
        \n
        \n***Sound encoding/decoding:
        \n
        \n1. Input your message in the text box.
        \n2. Press the signal button to start the translation.
        \n3. A series of beeping sound will be played based on the morse code.
        \n4. If you want to decode the beeping code from another device, press the icon on the top right of title bar to get to decoding screen.
        \n5. By clicking the start decoding button, the decoded message along with the morse code will be displayed in real time.
        \n
        \n***Flash encoding/decoding:
        \n
        \n1.Input your message in the text box.
        \n2. Press the signal button to start the translation.
        \n3. The LED flash on the device flashes based on the morse code.
        \n4. (Coming Soon) If you want to decode the flash light from another device, press the icon on the top right of title bar to get to decoding screen.
        \n
        \n***Warning: The sound-light switch will be grayed out if the battery level is low.
    </string>
</resources>
