<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="teamname.morselight.LightActivity">
    <!--
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
        -->
    <item android:id="@+id/action_help_light" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about_light" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/encode_setting_light" android:title="@string/decode"
        android:icon="@drawable/action_bar_encode"
        app:showAsAction="always" />
</menu>
