<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MorseLight"
    style="@style/background_color">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PlainText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:hint="Enter message to encode here: "
        android:textSize="18dp"
        android:maxLines="5"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PlainText"
        android:orientation="horizontal"
        android:id="@+id/lin_layout"
        android:weightSum="1.0">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode"
            android:id="@+id/button"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switch1"
            android:background="@drawable/red_button"
            style="@style/button_text"
            android:layout_weight=".75"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/switch1"
            android:textOff="@string/sound_switch"
            android:textOn="@string/light_switch"
            android:layout_alignBottom="@+id/button"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/PlainText"
            android:textSize="18dp"
            android:layout_weight=".25"
            android:showText="true" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Default"
        android:id="@+id/MorseCode"
        android:layout_below="@+id/lin_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="36sp"
        style="@style/main_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/MorseCodeDecode"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textSize="36sp"
        android:layout_below="@+id/MorseCode"
        style="@style/main_text"/>

</RelativeLayout>
